--- a/pages/notes/04-real-induction/index.mdx
+++ b/pages/notes/04-real-induction/index.mdx
@@ -1,3 +1,15 @@
+import { NoteLayout } from "components/layout/note";
+
+export const meta = {
+  name: "Real Induction",
+  description: "Review and tools for Real Induction",
+  icon: "/icons/real-induction.svg",
+};
+
 # Real Induction
 
 hello
+
+export default ({ children }) => (
+  <NoteLayout meta={meta}>{children}</NoteLayout>
+);
