--- a/pages/notes/04-real-induction/index.mdx
+++ b/pages/notes/04-real-induction/index.mdx
@@ -1,4 +1,4 @@
-import { NoteLayout } from "components/layout/note";
+import { NoteLayout } from "components/layout";
 
 export const meta = {
   name: "Real Induction",
